Refactor HttpHeaders adapters
This commit moves all HttpHeaders to a new http.support package, hiding
them behind static methods in HeadersAdapterUtils, so that they can
be used from client and server, reactive and non-reactive.