@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2021 the original author or authors.
+ * Copyright 2002-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -14,84 +14,88 @@
  * limitations under the License.
  */
 
-package org.springframework.http.server.reactive;
+package org.springframework.http.support;
 
 import java.util.AbstractSet;
-import java.util.ArrayList;
 import java.util.Collection;
+import java.util.Collections;
+import java.util.Enumeration;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import java.util.stream.Collectors;
 
-import io.undertow.util.HeaderMap;
-import io.undertow.util.HeaderValues;
-import io.undertow.util.HttpString;
+import org.apache.tomcat.util.buf.MessageBytes;
+import org.apache.tomcat.util.http.MimeHeaders;
 
+import org.springframework.http.HttpHeaders;
 import org.springframework.lang.Nullable;
 import org.springframework.util.CollectionUtils;
 import org.springframework.util.MultiValueMap;
 
 /**
- * {@code MultiValueMap} implementation for wrapping Undertow HTTP headers.
+ * {@code MultiValueMap} implementation for wrapping Tomcat HTTP headers.
  *
  * @author Brian Clozel
  * @author Sam Brannen
  * @since 5.1.1
  */
-class UndertowHeadersAdapter implements MultiValueMap<String, String> {
+final class TomcatHeadersAdapter implements MultiValueMap<String, String> {
 
-	private final HeaderMap headers;
+	private final MimeHeaders headers;
 
 
-	UndertowHeadersAdapter(HeaderMap headers) {
+	TomcatHeadersAdapter(MimeHeaders headers) {
 		this.headers = headers;
 	}
 
 
 	@Override
 	public String getFirst(String key) {
-		return this.headers.getFirst(key);
+		return this.headers.getHeader(key);
 	}
 
 	@Override
 	public void add(String key, @Nullable String value) {
-		this.headers.add(HttpString.tryFromString(key), value);
+		this.headers.addValue(key).setString(value);
 	}
 
 	@Override
-	@SuppressWarnings("unchecked")
 	public void addAll(String key, List<? extends String> values) {
-		this.headers.addAll(HttpString.tryFromString(key), (List<String>) values);
+		values.forEach(value -> add(key, value));
 	}
 
 	@Override
 	public void addAll(MultiValueMap<String, String> values) {
-		values.forEach((key, list) -> this.headers.addAll(HttpString.tryFromString(key), list));
+		values.forEach(this::addAll);
 	}
 
 	@Override
 	public void set(String key, @Nullable String value) {
-		this.headers.put(HttpString.tryFromString(key), value);
+		this.headers.setValue(key).setString(value);
 	}
 
 	@Override
 	public void setAll(Map<String, String> values) {
-		values.forEach((key, list) -> this.headers.put(HttpString.tryFromString(key), list));
+		values.forEach(this::set);
 	}
 
 	@Override
 	public Map<String, String> toSingleValueMap() {
 		Map<String, String> singleValueMap = CollectionUtils.newLinkedHashMap(this.headers.size());
-		this.headers.forEach(values ->
-				singleValueMap.put(values.getHeaderName().toString(), values.getFirst()));
+		this.keySet().forEach(key -> singleValueMap.put(key, getFirst(key)));
 		return singleValueMap;
 	}
 
 	@Override
 	public int size() {
-		return this.headers.size();
+		Enumeration<String> names = this.headers.names();
+		int size = 0;
+		while (names.hasMoreElements()) {
+			size++;
+			names.nextElement();
+		}
+		return size;
 	}
 
 	@Override
@@ -101,28 +105,41 @@ class UndertowHeadersAdapter implements MultiValueMap<String, String> {
 
 	@Override
 	public boolean containsKey(Object key) {
-		return (key instanceof String headerName && this.headers.contains(headerName));
+		if (key instanceof String headerName) {
+			return (this.headers.findHeader(headerName, 0) != -1);
+		}
+		return false;
 	}
 
 	@Override
 	public boolean containsValue(Object value) {
-		return (value instanceof String &&
-				this.headers.getHeaderNames().stream()
-						.map(this.headers::get)
-						.anyMatch(values -> values.contains(value)));
+		if (value instanceof String text) {
+			MessageBytes messageBytes = MessageBytes.newInstance();
+			messageBytes.setString(text);
+			for (int i = 0; i < this.headers.size(); i++) {
+				if (this.headers.getValue(i).equals(messageBytes)) {
+					return true;
+				}
+			}
+		}
+		return false;
 	}
 
 	@Override
 	@Nullable
 	public List<String> get(Object key) {
-		return (key instanceof String headerName ? this.headers.get(headerName) : null);
+		if (containsKey(key)) {
+			return Collections.list(this.headers.values((String) key));
+		}
+		return null;
 	}
 
 	@Override
 	@Nullable
 	public List<String> put(String key, List<String> value) {
-		HeaderValues previousValues = this.headers.get(key);
-		this.headers.putAll(HttpString.tryFromString(key), value);
+		List<String> previousValues = get(key);
+		this.headers.removeHeader(key);
+		value.forEach(v -> this.headers.addValue(key).setString(v));
 		return previousValues;
 	}
 
@@ -130,18 +147,16 @@ class UndertowHeadersAdapter implements MultiValueMap<String, String> {
 	@Nullable
 	public List<String> remove(Object key) {
 		if (key instanceof String headerName) {
-			Collection<String> removed = this.headers.remove(headerName);
-			if (removed != null) {
-				return new ArrayList<>(removed);
-			}
+			List<String> previousValues = get(key);
+			this.headers.removeHeader(headerName);
+			return previousValues;
 		}
 		return null;
 	}
 
 	@Override
 	public void putAll(Map<? extends String, ? extends List<String>> map) {
-		map.forEach((key, values) ->
-				this.headers.putAll(HttpString.tryFromString(key), values));
+		map.forEach(this::put);
 	}
 
 	@Override
@@ -156,9 +171,7 @@ class UndertowHeadersAdapter implements MultiValueMap<String, String> {
 
 	@Override
 	public Collection<List<String>> values() {
-		return this.headers.getHeaderNames().stream()
-				.map(this.headers::get)
-				.collect(Collectors.toList());
+		return keySet().stream().map(this::get).toList();
 	}
 
 	@Override
@@ -179,49 +192,52 @@ class UndertowHeadersAdapter implements MultiValueMap<String, String> {
 
 	@Override
 	public String toString() {
-		return org.springframework.http.HttpHeaders.formatHeaders(this);
+		return HttpHeaders.formatHeaders(this);
 	}
 
 
 	private class EntryIterator implements Iterator<Entry<String, List<String>>> {
 
-		private final Iterator<HttpString> names = headers.getHeaderNames().iterator();
+		private final Enumeration<String> names = headers.names();
 
 		@Override
 		public boolean hasNext() {
-			return this.names.hasNext();
+			return this.names.hasMoreElements();
 		}
 
 		@Override
 		public Entry<String, List<String>> next() {
-			return new HeaderEntry(this.names.next());
+			return new HeaderEntry(this.names.nextElement());
 		}
 	}
 
 
-	private class HeaderEntry implements Entry<String, List<String>> {
+	private final class HeaderEntry implements Entry<String, List<String>> {
 
-		private final HttpString key;
+		private final String key;
 
-		HeaderEntry(HttpString key) {
+		HeaderEntry(String key) {
 			this.key = key;
 		}
 
 		@Override
 		public String getKey() {
-			return this.key.toString();
+			return this.key;
 		}
 
+		@Nullable
 		@Override
 		public List<String> getValue() {
-			return headers.get(this.key);
+			return get(this.key);
 		}
 
+		@Nullable
 		@Override
 		public List<String> setValue(List<String> value) {
-			List<String> previousValues = headers.get(this.key);
-			headers.putAll(this.key, value);
-			return previousValues;
+			List<String> previous = getValue();
+			headers.removeHeader(this.key);
+			addAll(this.key, value);
+			return previous;
 		}
 	}
 
@@ -230,34 +246,40 @@ class UndertowHeadersAdapter implements MultiValueMap<String, String> {
 
 		@Override
 		public Iterator<String> iterator() {
-			return new HeaderNamesIterator(headers.getHeaderNames().iterator());
+			return new HeaderNamesIterator(headers.names());
 		}
 
 		@Override
 		public int size() {
-			return headers.getHeaderNames().size();
+			Enumeration<String> names = headers.names();
+			int size = 0;
+			while (names.hasMoreElements()) {
+				names.nextElement();
+				size++;
+			}
+			return size;
 		}
 	}
 
 	private final class HeaderNamesIterator implements Iterator<String> {
 
-		private final Iterator<HttpString> iterator;
+		private final Enumeration<String> enumeration;
 
 		@Nullable
 		private String currentName;
 
-		private HeaderNamesIterator(Iterator<HttpString> iterator) {
-			this.iterator = iterator;
+		private HeaderNamesIterator(Enumeration<String> enumeration) {
+			this.enumeration = enumeration;
 		}
 
 		@Override
 		public boolean hasNext() {
-			return this.iterator.hasNext();
+			return this.enumeration.hasMoreElements();
 		}
 
 		@Override
 		public String next() {
-			this.currentName = this.iterator.next().toString();
+			this.currentName = this.enumeration.nextElement();
 			return this.currentName;
 		}
 
@@ -266,10 +288,11 @@ class UndertowHeadersAdapter implements MultiValueMap<String, String> {
 			if (this.currentName == null) {
 				throw new IllegalStateException("No current Header in iterator");
 			}
-			if (!headers.contains(this.currentName)) {
+			int index = headers.findHeader(this.currentName, 0);
+			if (index == -1) {
 				throw new IllegalStateException("Header not present: " + this.currentName);
 			}
-			headers.remove(this.currentName);
+			headers.removeHeader(index);
 		}
 	}
 
